# reactive-lighting-hue

./: .env.example  .gitignore  CMakeLists.txt  README.md  bridge.json  justfile
cmake/: PatchEDK.cmake
src/: main.cpp
src/beat/: BeatClock.cpp  BeatClock.h
src/effects/: BezierFadeEffect.cpp  BezierFadeEffect.h  FadeEffect.cpp  FadeEffect.h  IEffect.h
src/hue/: HueController.cpp  HueController.h  Scene.cpp  Scene.h
src/ndi/: NDIController.cpp  NDIController.h
src/runner/: Runner.cpp  Runner.h
src/utils/: SignalHandler.cpp  SignalHandler.h
